fix: support dynamic viewport on mobile (#74)
* fix: support dynamic viewport on mobile

* fix: remove duplicate body height value

* fix: advertise support for dark and light theme

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,4 +1,6 @@
 :root {
+	color-scheme: dark light;
+
 	--bg-color: hsl(0, 0%, 0%);
 	--primary-color: hsl(0, 0%, 97%);
 	--secondary-color: hsla(0, 0%, 75%, 0.8);
